--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zed-wasm"
 version = "0.0.0"
-description = "Language support of WebAssembly Text Format"
+description = "Zed extension of WebAssembly Language Tools."
 authors = ["Pig Fang <g-plane@hotmail.com>"]
 license = "MIT"
 edition = "2021"
