--- a/extension.toml
+++ b/extension.toml
@@ -1,6 +1,6 @@
-id = "wat"
+id = "wasm"
 name = "WebAssembly Text Format"
-version = "0.0.0"
+version = "0.1.0"
 schema_version = 1
 authors = ["Pig Fang <g-plane@hotmail.com>"]
 description = "Language support of WebAssembly Text Format"
